@@ -1,3 +1,9 @@
+105
+- fix for some scrambled channels
+- update dvbapi to d7c7587
+- update Sat>IP plugin to ed99cfb
+- update VNSI to 615a077
+
 104
 - encode special characters in directory names to be accesible via smb
 - update VNSI to d6847c3
